# old-sql-shop-to-saleor-migration

./: .env.example  .gitignore  Cargo.toml  README.md  filled_out_kategorie.yaml  rust-toolchain.toml
category-tree-generator/: .env.example  .gitignore  Cargo.toml  build.rs  katekórie.yaml  products_to_test.txt
category-tree-generator/schemas/: saleor.graphql
category-tree-generator/src/: get_sqls.rs  main.rs  tests.rs
db/: docker-compose.yml
media/: .gitignore  config.json  package-lock.json  package.json
src/: get_sqls.rs  gql_queries.rs  main.rs  tests.rs
wipe-products/: bun.lockb  codegen.ts  package.json  schema.graphql
wipe-products/src/: index.ts
