[package]
name = "db-migration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.165", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
    "bigdecimal",
] }
dotenvy = "0.15.7"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy_macro = "0.15.7"
walkdir = "2.3.3"
serde_json = "1.0.103"
cynic = { version = "3.2.2", features = ["http-surf", "rkyv"] }
surf = {version = "2.3.2", default-features=false, features= ["h1-client"]}
scraper = "0.17.1"
rand = "0.8.5"
rust_decimal = { version = "1.31.0", features = [
    "serde-with-float",
    "serde-with-str",
    "serde-with-arbitrary-precision",
] }
rust_decimal_macros = "1.31.0"
html-escape = "0.2.13"
deunicode = "1.3.3"
regex = "1.9.3"
local-ip-address = "0.5.4"
async-native-tls = { version = "0.3.3"}
serde_yaml = "0.9.27"
# suppaftp = {version = "5.1.2", features = ["native-tls"]}
# rocket = "=0.5.0-rc.3"
# tls = "0.0.3"

[build-dependencies]
cynic-codegen = "3.2.2"
